syntax = "proto3";
package cosmonaut.blog.blog;

import "gogoproto/gogo.proto";
import "blog/params.proto";
import "blog/comment.proto";
import "blog/follow.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cosmonaut/blog/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Comment commentList = 2 [(gogoproto.nullable) = false];
  uint64 commentCount = 3;
  repeated Follow followList = 4 [(gogoproto.nullable) = false];
  uint64 followCount = 5;
  // this line is used by starport scaffolding # genesis/proto/state
}
